Completata parte bottoni

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         </header>
         <!-- /parte dell'header  -->
         <!-- parte del main  -->
-        <main></main>
+        <main>
+            <!-- contenitore bottoni  -->
+            <div id="cont-butt" class="contenitore">
+                <button class="button butt-blue">Add Task</button>
+                <button class="button butt-white">Add Section</button>
+            </div>
+            <!-- / contenitore bottoni  -->
+          
+        </main>
         <!-- /parte del main  -->
     </body>
 </html>
