Completato sezione New Tasks

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
                 <button class="button butt-white">Add Section</button>
             </div>
             <!-- / contenitore bottoni  -->
-          
+            <!-- sezione new tasks  -->
+            <section id="cont-tasks" class="contenitore">
+                <h2>&#x25BE; New Tasks</h2>
+                <span class="circle circle-green">&check;</span> Quarterly Newslatter
+                <span class="label label-editorial">Editorial</span>
+             </section>
+            <!-- /sezione new tasks  -->
         </main>
         <!-- /parte del main  -->
     </body>
