Completata sezione Today

--- a/index.html
+++ b/index.html
@@ -25,13 +25,40 @@
                 <button class="button butt-white">Add Section</button>
             </div>
             <!-- / contenitore bottoni  -->
-            <!-- sezione new tasks  -->
-            <section id="cont-tasks" class="contenitore">
-                <h2>&#x25BE; New Tasks</h2>
-                <span class="circle circle-green">&check;</span> Quarterly Newslatter
-                <span class="label label-editorial">Editorial</span>
-             </section>
-            <!-- /sezione new tasks  -->
+            <!-- contenitore tasks  -->
+            <div id="cont-tasks" class="contenitore">
+                <!-- sezione new tasks  -->
+                <section>
+                    <h2>&#x25BE; New Tasks</h2>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Quarterly Newslatter
+                        <span class="label label-editorial">Editorial</span>
+                    </div>
+                </section>
+                <!-- /sezione new tasks  -->
+                <!-- sezione Today  -->
+                <section>
+                    <h2>&#x25BE; Today</h2>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Recruiting blog post
+                        <span class="label label-editorial">Editorial</span>
+                    </div>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Mobile app launch
+                        <span class="label label-goals">Q1 Goals</span>
+                    </div>
+                    <div class="single-tasks">
+                        <span class="circle circle-red">&#215;</span> Interview John H.
+                        <span class="label label-recruiting">Recruiting</span>
+                    </div>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Summit update to mobile storefronts
+                        <span class="label label-mobile">Recruiting</span>
+                    </div>
+                </section>
+                <!-- /sezione Today  -->
+            </div>
+            <!-- contenitore tasks  -->
         </main>
         <!-- /parte del main  -->
     </body>
