Completata sezione Upcoming

--- a/index.html
+++ b/index.html
@@ -57,6 +57,26 @@
                     </div>
                 </section>
                 <!-- /sezione Today  -->
+                <!-- sezione Upcoming  -->
+                <section>
+                    <h2>&#x25BE; Upcoming</h2>
+                    <div class="single-tasks">
+                        <span class="circle circle-red">&#215;</span> Schedule meeting with Alex
+                    </div>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Homepage refresh
+                        <span class="label label-website">Website</span>
+                    </div>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Onboard new Sales team members
+                        <span class="label label-sales">Sales</span>
+                    </div>
+                    <div class="single-tasks">
+                        <span class="circle circle-green">&check;</span> Review editorial calendar
+                        <span class="label label-editorial">Editorial</span>
+                    </div>
+                </section>
+                <!-- /sezione Upcoming  -->
             </div>
             <!-- contenitore tasks  -->
         </main>
